<!--
  Created by Marc Pacheco Garcia on 28/4/13.            
  http://marcpacheco.me                                 
  Copyright (c) 2013, All rights reserved.              
  App icon and Images are property of Institut Marina
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_language"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_language"/>
    
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/about"/>
    
    <item
        android:id="@+id/action_list_of_changes"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/register_changes"/>

</menu>
