<?xml version="1.0" encoding="utf-8"?>
<!--
  Created by Marc Pacheco Garcia on 28/4/13.            
  http://marcpacheco.me                                 
  Copyright (c) 2013, All rights reserved.              
  App icon and Images are property of Institut Marina
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/simple_activities_background" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="96dp"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView1"
            android:layout_centerHorizontal="true"
            android:text="@string/current_version" />

        <!-- Line separator -->

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/txv_version"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="48dp"
            android:background="#FFBBBBBB"
            android:orientation="vertical" >
        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/linearLayout1"
            android:layout_alignRight="@+id/linearLayout1"
            android:layout_centerVertical="true"
            android:text="@string/application_developed_by" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView2"
            android:layout_below="@+id/textView2"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/developer_name"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView3"
            android:layout_below="@+id/textView3"
            android:layout_marginTop="2dp"
            android:autoLink="web"
            android:text="@string/developer_website" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/linearLayout1"
            android:layout_alignRight="@+id/textView6"
            android:layout_below="@+id/textView4"
            android:layout_marginTop="25dp"
            android:text="@string/info_for_developers" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView4"
            android:layout_alignRight="@+id/textView2"
            android:layout_below="@+id/textView5"
            android:layout_marginTop="10dp"
            android:text="@string/code_avaliable_in_github" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView6"
            android:layout_below="@+id/textView6"
            android:layout_marginTop="2dp"
            android:autoLink="web"
            android:text="@string/url_repository_github" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="60dp"
            android:layout_height="62dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="26dp"
            android:src="@drawable/marina_logo_218_194" />

    </RelativeLayout>

</FrameLayout>
