<!--
  Created by Marc Pacheco Garcia on 28/4/13.            
  http://marcpacheco.me                                 
  Copyright (c) 2013, All rights reserved.              
  App icon and Images are property of Institut Marina
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF6F6F6"
    android:orientation="horizontal"
    tools:context=".MainActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="match_parent"
                android:layout_height="76dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo"
                android:layout_marginBottom="16dp" />

            <Button
                android:id="@+id/btn_marina"
                style="@style/RSSButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/button_marina_rss" />

            <Button
                android:id="@+id/btn_revista_marina"
                style="@style/RSSButtons"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="-2dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/button_marina_revista_rss" />
           
            <Button
                android:id="@+id/btn_center_plane"
                style="@style/RSSButtons"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="-2dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/button_marina_center_plane" />
            

            <!-- COMPOSITE OF TABLELAYOUT -->
            
            <TableLayout
                android:id="@+id/tablelayout_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:dividerPadding="0dp" >
            </TableLayout>
         
        </LinearLayout>

    </ScrollView>

</FrameLayout>
